Fri Sep 23 16:22:01 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/AnyTypeCode/Any_Basic_Impl_T.cpp:
        
          Added include of Any.h, similar to the other Any_*_Impl_T.cpp
          files. The need for this include shows up only when enums
          are seen in an IDL file, with no other IDL types to
          pull in the include. Thanks to Jules Colding <colding@omesc.com>
          for reporting the problem.

Fri Sep 23 07:42:38 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/examples/Security/Send_File/Makefile.am:

	  Regenerate.

	* orbsvcs/examples/Security/Send_File/Security_Send_File.mpc:

          Add "*idl" project for compiling *.idl files.

Fri Sep 23 07:07:33 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/examples/LoadBalancing/LoadBalancing.mpc:

	  Changed *idl project to inherit from anytypecode.

Fri Sep 23 14:31:39 2005  Simon McQueen  <sm@prismtech.com>

        * docs/Options.html:

          Removed some text that had been put in the wrong place.

Fri Sep 23 05:55:03 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/HTIOP/Hello/Makefile.am:

	  Regenerated.

	* orbsvcs/HTIOP/Hello/HTIOP_Hello.mpc:

	  Added "custom_only = 1" to *idl project.

Fri Sep 23 11:16:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Notify/Event.inl:
          Emulated exception fix

Fri Sep 23 11:09:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/ECG_Mcast_Gateway.{h,cpp}:
        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.cpp:
          Some wchar fixes

Fri Sep 23 10:05:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/CallbackTest/Callback.cpp:
        * tests/CallbackTest/server.cpp:
        * tests/CallbackTest/client.cpp:

          Fixed compile warnings.

Thu Sep 22 23:55:22 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/tests/HTIOP/AMI/Makefile.am:
        * orbsvcs/tests/HTIOP/Hello/Makefile.am:
