@@ -1,3 +1,11 @@
+Fri Sep 23 12:17:29 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
+
+	* tests/Bug_2222_Regression/test.cpp (main):
+
+	  Removed unnecessary try/catch block that caused an "unused
+	  ACE_TRY_LABEL" warning in emulated exception builds.  Thanks to
+	  Simon Massey for pointing out the problem.
+
 Fri Sep 23 16:22:01 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * tao/AnyTypeCode/Any_Basic_Impl_T.cpp:
